<resources>

    <string name="app_name">CoolReader</string>
    <string name="file_tree_sdcard_title">SDcard</string>
    <string name="file_tree_sdcard_summary">the extenal file system</string>
    <string name="file_tree_root_title">File Tree Root</string>
    <string name="file_tree_root_summary">the local file system</string>
    <string name="file_tree_coolreader_title">CoolReader Library</string>
    <string name="file_tree_coolreader_summary">the file system of coolreader</string>
    <string name="permission_denied">permission denied!</string>
    <string name="openning">openning...</string>
    <string name="toast_last_page">this is the last page!</string>
    <string name="toast_first_page">this is the first page!</string>
    <string name="book_shelf">书架</string>
    <string name="day">白天</string>
    <string name="night">夜晚</string>
    <string name="font_zoom_in">字体放大</string>
    <string name="font_zoom_out">字体缩小</string>
    <string name="setting">设置</string>
    <string name="navigation">导航</string>
    <string name="auto_orientation">自动旋转屏幕</string>
    <string name="auto_orientation_summary_on">晃动设备自动旋转</string>
    <string name="auto_orientation_summary_off">晃动设备禁止旋转</string>
    <string name="reading_with_status">显示状态栏</string>
    <string name="reading_with_status_summary_on">阅读时显示状态栏</string>
    <string name="reading_with_status_summary_off">阅读时隐藏状态栏</string>
    <string name="active_menu_with_status">菜单活动时显示状态栏</string>
    <string name="active_menu_with_status_summary_on">菜单活动时显示状态栏</string>
    <string name="active_menu_with_status_summary_off">菜单活动时隐藏状态栏</string>
    <string name="status">状态栏</string>
    <string name="appearence">显示</string>
    <string name="font_size">字体大小</string>
    <string name="line_space">行间距</string>
    <string name="directory">目录</string>
    <string name="book_directory">书籍目录</string>
    <string name="font_directory">字体目录</string>
    <string name="wallpaper_directory">壁纸目录</string>
    <string name="appearence_model">显示方式</string>
    <string name="font">字体</string>
    <string name="word">文字</string>
    <string name="pref_font_size">pref_font_size</string>
    <string name="pref_font_family">pref_font_family</string>
    <string name="font_family">字型</string>
    <string name="margin">边距</string>
    <string name="left_margin">左边距</string>
    <string name="bottom_margin">下边距</string>
    <string name="right_margin">右边距</string>
    <string name="top_margin">上边距</string>
    <string name="show_time">显示时间</string>
    <string name="show_time_at_footer">在页脚处显示时间</string>
    <string name="dont_show_time_at_footer">不在页脚处显示时间</string>
    <string name="show_battery_percent_at_footer">在页脚处显示电量百分比</string>
    <string name="dont_show_battery_percent_at_footer">不在页脚处显示电量百分比</string>
    <string name="show_page_number">显示页码</string>
    <string name="show_battery_percent">显示电量百分比</string>
    <string name="decoration">渲染</string>
    <string name="scrolling">翻阅</string>
    <string name="scrolling_with_volumn_key">使用音量键翻动页面</string>
    <string name="dont_scrolling_with_volumn_key">禁用音量键翻动页面</string>
    <string name="volumn_key_scrolling">音量键翻动</string>
    <string name="animation_to_scrolling">翻阅动画</string>
    <string name="animation_speed">动画速度</string>
    <string name="pref_autoorientation">pref_autoorientation</string>
    <string name="pref_reading_with_status">pref_reading_with_status</string>
    <string name="pref_active_menu_with_status">pref_active_menu_with_status</string>
    <string name="pref_line_space">pref_line_space</string>
    <string name="pref_left_margin">pref_left_margin</string>
    <string name="pref_top_margin">pref_top_margin</string>
    <string name="pref_right_margin">pref_right_margin</string>
    <string name="pref_bottom_margin">pref_bottom_margin</string>
    <string name="pref_show_time">pref_show_time</string>
    <string name="pref_show_battery_percent">pref_show_battery_percent</string>
    <string name="pref_show_page_number">pref_show_page_number</string>
    <string name="pref_scrolling_with_volumn_key">pref_scrolling_with_volumn_key</string>
    <string name="pref_animaton">pref_animaton</string>
    <string name="pref_animaton_speed">pref_animaton_speed</string>
    <string name="dont_show_page_number_at_footer">不在页脚处显示页码</string>
    <string name="show_page_number_at_footer">在页脚处显示页码</string>
    <string name="bookmark">书签</string>
    <string name="more">更多</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="zoom_out">缩小</string>
    <string name="zoom_in">放大</string>
    <string name="_import">导入</string>
    <string name="netlibray">网络</string>

</resources>