<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/tvSwitchStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/reader_text_size"
        android:gravity="center"
        android:text="@string/night"
        android:textColor="#ffffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvChangeFont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/reader_text_size"
        android:gravity="center"
        android:text="@string/font"
        android:textColor="#ffffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvBookmark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/reader_bookmark_operation"
        android:gravity="center"
        android:text="@string/bookmark"
        android:textColor="#ffffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvNavigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/reader_jump_to"
        android:gravity="center"
        android:text="@string/navigation"
        android:textColor="#ffffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:drawableTop="@drawable/reader_text_size"
        android:gravity="center"
        android:text="@string/more"
        android:textColor="#ffffffff"
        android:textSize="15sp"
        android:textStyle="bold" />

</LinearLayout>